# deeprl

./: .gitignore  =2.5.0  AGENTS.md  COMMANDS.md  LICENSE  MANIFEST.in  README.md  SPECS.md  main.py  pyproject.toml  requirements.txt  run_experiments.py
deeprl/: __init__.py  registry.py
deeprl/agents/: __init__.py  base.py  human_agent.py  random_agent.py
deeprl/agents/imitation/: __init__.py  expert_apprentice.py
deeprl/agents/planning/: __init__.py  alphazero.py  mcts.py  muzero.py  muzero_stochastic.py
deeprl/agents/policy_based/: __init__.py  policy_gradient.py  ppo.py  reinforce.py
deeprl/agents/policy_gradient/: __init__.py  reinforce.py
deeprl/agents/tabular/: __init__.py  q_learning.py
deeprl/agents/tree_search/: __init__.py  alphazero.py  mcts.py  muzero.py  random_rollout.py
deeprl/agents/value_based/: __init__.py  dqn.py
deeprl/envs/: __init__.py  base.py  grid_world.py  line_world.py  quarto.py  tictactoe.py
deeprl/gui/: __init__.py  game_viewer.py
deeprl/memory/: __init__.py  prioritized_buffer.py  replay_buffer.py
deeprl/networks/: __init__.py  mlp.py
deeprl/training/: __init__.py  benchmark.py  evaluator.py  trainer.py
